--- a/ang/src/app/components/faq/faq.component.html
+++ b/ang/src/app/components/faq/faq.component.html
@@ -1,7 +1,7 @@
 <br>
 <div class="container">
   <h2 *ngIf="sessionQuestions.length > 0">Training Session Questions</h2><br>
-  <h2 *ngIf="sessionQuestions.length === 0 && loaded">There are no questions in your training session yet!</h2>
+  <h2 *ngIf="sessionQuestions.length === 0 && loaded">There are no questions yet!</h2>
   <div class="row">
     <div class="col-12">
       <ul class="list-group">
