--- a/ang/src/app/components/user/register/register.component.html
+++ b/ang/src/app/components/user/register/register.component.html
@@ -27,7 +27,7 @@
           <input type="password" class="form-control" name="password" ngModel>
         </div>
         <div class="form-group">
-          <label for="session">Training Session Id</label>
+          <label for="session">Training Session Id <i class="fa fa-info-circle info-icon" placement="top" ngbPopover="Chainworks LLC offers enterprise grade blockchain training workshops.  For more information about our training, please send a email with your inquiry to ping@chainworks.com.  For access to our blockchain training demo, use the guest access code 'chainworks-guest' as the session id" popoverTitle="Corporate Training"></i></label>
           <input type="text" class="form-control" name="session" ngModel>
           <p *ngIf="sessionError" class="helper-text" style="color:red;">Please enter a valid training session ID</p>
         </div>
