--- a/ang/src/app/components/navbar/navbar.component.html
+++ b/ang/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         </li>
         <li *ngIf="user.session !== 'chainworks-guest'" class="nav-item">
-            <a class="nav-link" href="http://cwlabs.eastus.cloudapp.azure.com" target="_new" routerLinkActive="active">UL Certificate Demo</a>
+            <a class="nav-link" href="http://cwlabs.eastus.cloudapp.azure.com" target="_new" routerLinkActive="active">Certificate Demo</a>
         </li>
         <li class="nav-item">
           <a routerLink="/glossary" routerLinkActive="active" class="nav-link">Glossary</a>
